[package]
name = "rust-service"
version = "0.1.0"
edition = "2021"
description = "Rust Axum service for Financial Kanban System"

[dependencies]
# Web 框架
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# MongoDB
mongodb = "3.4"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 环境变量
dotenv = "0.15"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 工具
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

# 测试
[dev-dependencies]
tokio-test = "0.4"
